--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-lock": "^1.4.0",
     "email-validator": "^2.0.4",
     "react": "^18.2.0"
   },
   "devDependencies": {
+    "@types/async-lock": "^1.4.2",
     "@types/email-validator": "^1.0.6"
   },
   "private": true
