--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "async-lock": "^1.4.0",
-    "email-validator": "^2.0.4",
-    "react": "^18.2.0"
+    "email-validator": "^2.0.4"
   },
   "devDependencies": {
     "@types/async-lock": "^1.4.2",
